change styling, add pictures to specialties, fix facebook preview

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
         <script type="text/JavaScript">
         document.write(new Date().getFullYear());
         </script>
-        Sary Rottenberg Psychotherapy | 245 W 29th St, New York, NY 10001 | (203)-518-4177 |
+        Rottenberg Therapy | 245 W 29th St, New York, NY 10001 |
         <a href="{% link _pages/contact.html %}">
           <i class="fas fa-envelope"></i>
         </a>
