add credentials about.html, sary-rottenberg

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -256,6 +256,14 @@ body {
   padding-top: 150px;
 }
 /* -------------------------Begin About Page Styles-------------------------------------------*/
+.owner {
+  font-size: 20px;
+}
+#sub-title {
+  padding-right: 30px;
+  font-size: 18px;
+  text-align: right;
+}
 .kate {
   background-image: url("/assets/img/Kate 8X10_website.jpg");
 }
