--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -27,7 +27,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{% link _pages/about.html %}">Who We Are</a>
+          <a class="nav-link" href="{% link _pages/meet-our-team.html %}">Who We Are</a>
         </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="">Blog</a>
