--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,49 +2,7 @@
 <html class="no-js" lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:fb="http://ogp.me/ns/fb#">
 
-  <head>
-    <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Sary Rottenberg Psychotherapy provides therapy to individuals and couples in New York City and surrounding areas. We specialize in and treat relationships, career changes, trauma, depression, anxiety as well as issues affecting the LGBTQ community.">
-    <meta name ="keywords" content="psychotherapy, lgbtq, gay, lesbian, queer, trauma, PTSD, depression, anxiety, nyc, manhattan">
-    <meta property="og:image" content="http://www.rottenbergtherapy.com/assets/img/hero.jpg" />
-    <meta property="og:site_name" content="Sary Rottenberg Psychotherapy"/>
-    <meta property="og:title" content="Rottenberg Therapy"/>
-    <meta property="og:url" content="http://www.rottenbergtherapy.com"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Queer Affirmative Psychodynamic Psychotherapy in NYC.  Hebrew Speaking"/>
-    <meta itemprop="name" content="Rottenberg Therapy"/>
-    <meta itemprop="url" content="http://www.rottenbergtherapy.com"/>
-    <meta itemprop="description" content="Queer Affirmative Psychodynamic Psychotherapy in NYC.  Hebrew Speaking"/>
-
-    <script type="application/ld+json">
-{
-  "@context": "https://schema.org/",
-  "@type": "LocalBusiness",
-  "name": "Rottenberg Therapy",
-  "image": [
-  "http://www.rottenbergtherapy.com/assets/img/hero.jpg"
-  ],
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "New York",
-    "addressRegion": "NY",
-    "streetAddress": "245 W 29th St"
-  },
-  "description": "Provides therapy to individuals and couples in New York City and surrounding areas. We specialize in and treat relationships, career changes, trauma, depression, anxiety as well as issues affecting the LGBTQ community.",
-  "url": "http://www.rottenbergtherapy.com"
-}
-</script>
-    <title>{{site.title}}</title>
-    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ '/assets/main.css' }}">
-  </head>
+    {% include head.html %}
 
   <body>
 
