--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Sary Rottenberg Psychotherapy provides therapy to individuals and couples in New York City and surrounding areas. We specialize in and treat relationships, career changes, trauma, depression, anxiety as well as issues affecting the LGBTQ community.">
+  <meta name="description" content="{{ site.description }}">
   <meta name ="keywords" content="psychotherapy, lgbtq, gay, lesbian, queer, trauma, PTSD, depression, anxiety, nyc, manhattan">
   <meta property="og:image" content="http://www.rottenbergtherapy.com/assets/img/hero.jpg" />
   <meta property="og:site_name" content="Sary Rottenberg Psychotherapy"/>
