add individual description for each page for meta, add favicon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
   <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="{{ site.description }}">
+  <meta name="description" content="{% if page.description %}{{ page.description }}{% endif %}">
   <meta name ="keywords" content="psychotherapy, lgbtq, gay, lesbian, queer, trauma, PTSD, depression, anxiety, nyc, manhattan">
   <meta property="og:image" content="http://www.rottenbergtherapy.com/assets/img/hero.jpg" />
   <meta property="og:site_name" content="Sary Rottenberg Psychotherapy"/>
@@ -42,4 +42,9 @@
   <!-- Material Design Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{{ '/assets/main.css' }}">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 </head>
