--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
 //fonts
-@import url('https://fonts.googleapis.com/css?family=Alice|Josefin+Sans:300,400,400i,600,600i,700,700i|Lexend+Exa|Roboto:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Alice|Josefin+Sans:300,400,400i,600,600i,700,700i|Lexend+Exa|Roboto:400,500,700&display=swap');
 
 
 //variables
