add service worker, manifest.json

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -81,7 +81,7 @@ body {
   margin-left: -200;
   padding-top: 6rem;
   padding-bottom: 24rem;
-  background: url("/assets/img/hero-compressor.jpg") no-repeat;
+  background: url("/assets/img/hero.webp") no-repeat;
   background-size: cover;
   background-position: right bottom;
   height: 100vh;
@@ -154,7 +154,7 @@ a.fas, .fa-arrow-circle-down {
   position: relative;
   padding-top: 6rem;
   padding-bottom: 24rem;
-  background: url("/assets/img/family-sitting-compressor.jpg") no-repeat;
+  background: url("/assets/img/family-sit.webp") no-repeat;
   background-size: cover;
   background-position: center 75%;
 }
