--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,16 @@
   <meta itemprop="url" content="http://www.rottenbergtherapy.com"/>
   <meta itemprop="description" content="Queer Affirmative Psychodynamic Psychotherapy in NYC.  Hebrew Speaking"/>
 
+  <script>
+  // Check that service workers are supported
+  if ('serviceWorker' in navigator) {
+    // Use the window load event to keep the page load performant
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/service-worker.js');
+    });
+  }
+  </script>
+
   <script type="application/ld+json">
   {
   "@context": "https://schema.org/",
@@ -43,8 +53,10 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{{ '/assets/main.css' }}">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+<link rel="manifest" href="manifest.json">
+
+
 </head>
