update htaccess, rename menu to navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
 <!-- begin site wrapper -->
 <div class="wrapper">
-{% include menu.html %}
+{% include navbar.html %}
 {{ content }}
 {% include footer.html %}
 </div>
