--- a/assets/main.scss
+++ b/assets/main.scss
@@ -81,7 +81,7 @@ body {
   margin-left: -200;
   padding-top: 6rem;
   padding-bottom: 24rem;
-  background: url("/assets/img/hero.webp") no-repeat;
+  background: url("/assets/img/hero.jpg") no-repeat;
   background-size: cover;
   background-position: right bottom;
   height: 100vh;
@@ -154,7 +154,7 @@ a.fas, .fa-arrow-circle-down {
   position: relative;
   padding-top: 6rem;
   padding-bottom: 24rem;
-  background: url("/assets/img/family-sit.webp") no-repeat;
+  background: url("/assets/img/family-sitting.jpg") no-repeat;
   background-size: cover;
   background-position: center 75%;
 }
@@ -178,12 +178,12 @@ a#section-two-arrow {
 }
 .office {
   height: 600px;
-  background: url("/assets/img/office.webp") no-repeat;
+  background: url("/assets/img/DSC01882_crop-website-compressor-1.jpg") no-repeat;
   background-size: cover;
   background-position: center left;
 }
 .box-1 {
-  background: url("/assets/img/group.webp")top left no-repeat;
+  background: url("/assets/img/group.jpg")top left no-repeat;
 }
 .box-2 {
   background: url("/assets/img/relationship.jpg")no-repeat;
@@ -195,12 +195,12 @@ a#section-two-arrow {
   background-position: 25% 40%;
 }
 .box-4 {
-  background: url("/assets/img/family.webp") top left no-repeat;
+  background: url("/assets/img/family.jpg") top left no-repeat;
   height: 200px;
   background-position: 25% 75%;
 }
 .box-5 {
-  background: url("/assets/img/career.webp") top left no-repeat;
+  background: url("/assets/img/career.jpg") top left no-repeat;
   height: 200px;
   background-position: 25% 75%;
 }
@@ -215,7 +215,7 @@ a#section-two-arrow {
   background-position: 70% 75%;
 }
 .box-8 {
-  background: url("/assets/img/anxiety.webp") top left no-repeat;
+  background: url("/assets/img/anxiety.jpg") top left no-repeat;
   height: 200px;
   background-position: 70% 50%;
 }
@@ -266,7 +266,7 @@ a#section-two-arrow {
   position: relative;
   padding-top: 6rem;
   padding-bottom: 24rem;
-  background: url("/assets/img/trees.webp") no-repeat;
+  background: url("/assets/img/trees.jpg") no-repeat;
   background-size: cover;
   background-position: center bottom;
 }
