--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
         <script type="text/JavaScript">
         document.write(new Date().getFullYear());
         </script>
-        Rottenberg Therapy | 245 W 29th St, New York, NY 10001 |
+        {{site.brand}} | {{site.address}} |
         <a href="{% link _pages/contact.html %}">
           <i class="fas fa-envelope"></i>
         </a>
