--- a/assets/main.scss
+++ b/assets/main.scss
@@ -315,6 +315,15 @@ a#section-two-arrow {
 .sary {
   background-image: url("/assets/img/Sary 8X10_website.jpg")
 }
+.rene {
+  background-image: url("/assets/img/rene.jpg")
+}
+.madison {
+  background-image: url("/assets/img/madison.png")
+}
+.cassandra {
+  background-image: url("/assets/img/cassandra.jpg")
+}
 .team {
   padding-left: 0;
   padding-right: 0;
