add employees folder, add bios, more _data

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -25,7 +25,7 @@
         </span>
         </div>
         <div class="card-body mdc-typography mdc-typography--body2 text-left">
-          {{employee[1].blurb}}
+          {{employee[1].blurb | markdownify}}
         </div>
           <div class="mdc-card__actions">
             <div class="mdc-card__action-buttons">
