--- a/assets/main.scss
+++ b/assets/main.scss
@@ -373,6 +373,8 @@ a {
   color: rgb(115, 38, 38);
   &:hover {
       color: rgba(204, 212, 217, 85);}
+  &:visited {
+      color: rgb(115, 38, 38);}
 }
 /* ------------------Begin Contact Form-----------------------------------------*/
 form {
