update script.js add new employees to contact form, add google analytics, add sass variables

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -29,9 +29,11 @@
     <div class="md-form form-group">
       <select id="menu" class="browser-default custom-select">
         <option>Who would you like to contact</option>
-        <option value="1">Sary Rottenberg</option>
-        <option value="2">Kate Blemler</option>
-        <option value="3">Alana Devine-Dunn</option>
+        <option value="1">{{site.data.employees.sary.name}}</option>
+        <option value="2">{{site.data.employees.alana.name}}</option>
+        <option value="3">{{site.data.employees.rene.name}}</option>
+        <option value="4">{{site.data.employees.cassandra.name}}</option>
+        <option value="5">{{site.data.employees.madison.name}}</option>
       </select>
     </div>
   </div>
