--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -7,3 +7,6 @@ $font-material: 'Roboto', sans-serif;
 $font-header: 'Lexend Exa', sans-serif;
 $font-body: 'Josefin Sans', sans-serif;
 $font-overlay: 'Alice', serif;
+
+$maroon: rgb(115, 38, 38);
+$light-grey: rgba(204, 212, 217, 85);
