--- a/assets/main.scss
+++ b/assets/main.scss
@@ -104,6 +104,9 @@ body {
   z-index: 100;
   animation: bounce .5s infinite alternate;
 -webkit-animation: bounce .5s infinite alternate;
+&:visited {
+  color: white;
+}
 }
 a.fas, .fa-arrow-circle-down {
   font-size: 30px;
@@ -240,9 +243,9 @@ a#section-two-arrow {
   width: 200px;
   height:200px;
 }
-.phone {
-  text-decoration: underline;
-}
+// .phone {
+//   text-decoration: underline;
+// }
 #footer {
   text-align: center;
   bottom: 0;
@@ -476,5 +479,6 @@ form {
   }
   .contact {
     text-align: left;
+    padding-left: 20px;
   }
 }
