--- a/assets/main.scss
+++ b/assets/main.scss
@@ -309,23 +309,23 @@ a#section-two-arrow {
   font-size: 18px;
   text-align: right;
 }
-.kate {
-  background-image: url("/assets/img/Kate 8X10_website.jpg");
+div.mdc-card__media {
+  background-position: top;
 }
 .alana {
-  background-image: url("/assets/img/Alana 8X10_website.jpg");
+  background-image: url("/assets/img/headshots/Alana-1.jpg");
 }
 .sary {
-  background-image: url("/assets/img/Sary 8X10_website.jpg")
+  background-image: url("/assets/img/headshots/Sary-1.jpg")
 }
 .rene {
-  background-image: url("/assets/img/rene.jpg")
+  background-image: url("/assets/img/headshots/Rene-1.jpg")
 }
 .madison {
-  background-image: url("/assets/img/madison.png")
+  background-image: url("/assets/img/headshots/Madison-1.jpg")
 }
 .cassandra {
-  background-image: url("/assets/img/cassandra.jpg")
+  background-image: url("/assets/img/headshots/Cassandra-1.jpg")
 }
 .team {
   padding-left: 0;
